--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio" onclick="showPortfolio()">Portfolio</a></li>
+            <li><a href="#service">Service</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    
+    <section id="home"><h1>Welcome to My Website</h1></section>
+    <section id="about"><h1>About Me</h1></section>
+    <section id="portfolio">
+        <h1>My Portfolio</h1>
+        <p>Name: John Doe</p>
+        <p>Profession: Visual Artist</p>
+        <p>Experience: 5+ years</p>
+    </section>
+    <section id="service"><h1>My Services</h1></section>
+    <section id="contact"><h1>Contact Me</h1></section>
 
-<div class="login">
-	<h1>Login</h1>
-    <form method="post">
-    	<input type="text" name="u" placeholder="Username" required="required" />
-        <input type="password" name="p" placeholder="Password" required="required" />
-        <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
-    </form>
-</div>
+    <script>
+        function showPortfolio() {
+            document.getElementById('portfolio').style.display = 'block';
+        }
+    </script>
+</body>
+</html>
