--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <section id="about"><h1>About Me</h1></section>
     <section id="portfolio">
         <h1>My Portfolio</h1>
-        <p>Name: John Doe</p>
-        <p>Profession: Visual Artist</p>
-        <p>Experience: 5+ years</p>
+        <p>Name: Harshvardhan R</p>
+        <p>Roll no: 727723euit071</p>
+        <p>College: Skcet</p>
+        <p>Year of study: II</p>
     </section>
     <section id="service"><h1>My Services</h1></section>
     <section id="contact"><h1>Contact Me</h1></section>
